make get and post work
